// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFilterButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props grow can be turned off 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton--noGrow"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props iconType and iconSide is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton--hasIcon"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonContent__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props isDisabled is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty-isDisabled ouiFilterButton"
  disabled=""
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props isSelected is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton-isSelected"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props numActiveFilters and hasActiveFilters is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton-hasActiveFilters"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text ouiFilterButton__text-hasNotification"
    >
      <span
        class="ouiFilterButton__textShift"
      />
      <span
        aria-label="5 active filters"
        class="ouiNotificationBadge ouiNotificationBadge--medium ouiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props numFilters is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton-hasNotification"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text ouiFilterButton__text-hasNotification"
    >
      <span
        class="ouiFilterButton__textShift"
      />
      <span
        aria-label="5 available filters"
        class="ouiNotificationBadge ouiNotificationBadge--medium ouiNotificationBadge--subdued ouiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props type is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton props withNext is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton--withNext"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      <span
        class="ouiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`OuiFilterButton renders zero properly 1`] = `
<button
  aria-label="aria-label"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton-hasNotification testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text ouiFilterButton__text-hasNotification"
    >
      <span
        class="ouiFilterButton__textShift"
      />
      <span
        aria-label="0 available filters"
        class="ouiNotificationBadge ouiNotificationBadge--medium ouiNotificationBadge--subdued ouiFilterButton__notification"
      >
        0
      </span>
    </span>
  </span>
</button>
`;
